Fix station list sticky headers issue on iOS

--- a/css/responsive.styl
+++ b/css/responsive.styl
@@ -100,6 +100,8 @@
     dt
       padding   5px 8px
       font-size smaller
+      // Fixes 1 pixel line offset in iOS
+      transform translateY(-1px)
 
     dd
       padding 8px
